--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.2.0",
+    "cdbreact": "^1.5.3",
     "dotenv": "^16.0.1",
     "eslint-plugin-react": "^7.30.1",
     "react": "^18.2.0",
