--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "swiper": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
