--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^4.0.5",
+    "react-toastify": "^9.0.8",
     "sass": "^1.54.4",
     "swiper": "^8.3.2"
   },
